@startuml diagrama

' Punto 2
entity alquiler {
    idAlquiler: numeric PK
    --
    anuncio: Anuncio FK
    inquilino: inquilino FK
    duracion: numeric(18, 2)
    fechaInicio: DateTime
    fechaFin: DateTime
    detalleImporte: DetalleImporte FK
    deposito: numeric (18, 2)
    comision: numeric (18, 2)
    gastosAveriguaciones: numeric (18, 2)
    estadoAlquiler: Estado FK
}


entity detalleImporte {
    idDetalleImporte: numeric
    nroPeriodoInicio: numeric
    nroPeriodoFin: numeric
    precio: numeric
}

entity pagoAlquiler {
    idPagoAlquiler: numeric
    alquiler: Alquiler FK
    fechaPago: DateTime
    nroPeriodoPago: numeric
    descripcionPeriodo: nvarchar(100)
    fechaInicioPeriodo: DateTime
    fechaFinPeriodo: DateTime
    importe: numeric
    medioPago: MedioPago FK
}

entity medioPago {
    idMedioPago: numeric
    nombre: nvarchar(100)
}

entity venta {
    idVenta: numeric
    anuncio: Anuncio FK
    comprador: comprador FK
    fechaDeVenta: DateTime
    precioDeVenta: numeric
    monedaDelPrecioDeVenta: tipoDeMoneda FK
    pago: pagoVenta FK
    comisionInmobiliaria: numeric
}

entity pagoVenta {
    idPagoVenta: Int PK
    --
    importe: numeric (18, 2)
    monedaDelPago: tipoDeMoneda FK
    cotizacion: numeric (18, 2)
    medioDePago: medioPago FK
}

entity sucursal {
    codigoSucursal: numeric PK
    --
    direccion: direccion FK
    nombre: nvarchar(100)
    telefono: nvarchar(100)
}

entity anuncio {
    nroAnuncio: numeric PK
    --
    fechaPublicacion: DateTime
    tipoOperacion: TipoOperacion FK
    agente: Agente FK
    inmueble: Inmueble FK
    precioPublicado: Double 
    moneda: tipoDeMoneda FK
    tipoPeriodo: TipoPeriodo FK
    estadoAnuncio: EstadoAnuncio FK
    fechaFinalizacion: DateTime
    costoPublicacion: Double
}

entity tipoDeMoneda {
    idMoneda: numeric PK
    --
    nombre: nvarchar(100)
}

/' PUNTO 1 '/
entity inmueble {
    nroInmueble: numeric PK
    --
    tipoDeInmueble: TipoDeInmueble FK  
    descripcion: nvarchar(100)
    direccion: Direccion FK
    ambientes: Smallnumeric
    superficieTotal: numeric
    disposicion: Disposicion FK
    orientacion: orientacion FK
    estado: estado FK
    Antiguedad: numeric
    expensas: numeric
}

entity propietarioDeInmueble {
    idPropietarioDeInmueble: numeric PK
    --
    propietario: propietario FK
    inmueble: inmueble FK
}

entity tipoDeInmueble {
    idTipoDeInmueble: numeric PK
    --
    nombre: nvarchar(100)
}

entity direccion {
    idDireccion: numeric PK
    --
    barrio: Barrio FK
    calle: nvarchar(100)
}

entity barrio {
    idBarrio: numeric PK
    --
    nombre: nvarchar(100)
    localidad: Localidad FK
}

entity localidad {
    idLocalidad: numeric
    nombre: nvarchar(100)
    provincia: Provincia FK
}

entity provincia {
    idProvincia: numeric
    nombre: nvarchar(100)
}

direccion |o--|| barrio
barrio }|--|| localidad
localidad }|--|| provincia


entity tipoOperacion {
    idTipoOperacion: numeric PK
    --
    nombre: nvarchar(100)
}


entity caracteristica {
    idCaracteristica PK
    nombre nvarchar(100)
}


entity tipoPeriodo {
    idTipoPeriodo numeric PK
    --
    nombre: nvarchar(100)
}

entity estadoAnuncio {
    idEstado numeric PK
    --
    nombre: nvarchar(100) 
}

entity disposicion {
    idDisposicion PK
    --
    nombre nvarchar(100)
}

entity orientacion {
    idOrientacion PK 
    nombre nvarchar(100)
}

entity inmuebleCaracteristica {
    inmueble: Inmueble FK PK
    caracteristica: Caracteristica FK PK
}

entity estado {
    idEstado PK
    nombre nvarchar(100)
}

entity estadoAlquiler {
    idEstadoAlquiler PK
    --
    nombre: nvarchar(100)
}

entity persona {
    idpersona PK
    nombre: nvarchar(100)
    apellido: nvarchar(100)
    dni: nvarchar(100)
    telefono: nvarchar(100) 
    mail: nvarchar(100)
    fechaRegistro: datetime
    fechaNacimiento: datetime
}

entity comprador{
    idcomprador PK
    --
    persona: persona FK
}

entity inquilino{
    idinquilino PK
    --
    persona: persona FK
}

entity propietario{
    idpropietario PK
    --
    persona: persona FK
}

entity agente {
    idagente PK
    --
    sucursal: sucursal FK
    persona: persona FK
}

' Anuncio
anuncio }o--||  tipoOperacion 
anuncio }o--|| inmueble
tipoDeMoneda ||--o{ anuncio 
tipoPeriodo ||--o{ anuncio  
estadoAnuncio ||--o{ anuncio

' Inmbueble
inmueble ||--|{ propietarioDeInmueble
propietarioDeInmueble }o--|| propietario
inmueble ||--o| direccion
inmueble }|--o| disposicion
inmueble }|--o| orientacion
estado ||--o{ inmueble
inmueble }o-|| tipoDeInmueble
inmuebleCaracteristica }|--o| inmueble
caracteristica |o--|{ inmuebleCaracteristica



' Alquiler
detalleImporte }|--||alquiler 
alquiler ||-|{ pagoAlquiler
estadoAlquiler }|--|| alquiler
alquiler |o--|| anuncio



' Pagos
pagoAlquiler }o-|| medioPago
' medioPago ||--o{ pagoAlquiler

' Venta
venta |o--|| anuncio
venta }|--|| tipoDeMoneda
venta ||--|{ pagoVenta
pagoVenta }o-|| medioPago

pagoVenta }o----|| tipoDeMoneda

alquiler ||--|{ inquilino
comprador ||--|{ venta
agente ||--|{ anuncio


' personas
propietario }|--|| persona
agente }|--|| persona
inquilino }|--|| persona
comprador }|--|| persona

agente ||--|{ sucursal
sucursal }o--|| direccion

@enduml
                                        

